# insect

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  Pipfile  README.md  RELEASE_NOTES_v0.1.3.md  RELEASE_NOTES_v0.1.4.md  RELEASE_NOTES_v0.1.5.md  coming-soon.md  cursor_metrics.md  insect_dashboard_20250602_212107.html  insect_dashboard_20250604_072916.html  insect_dashboard_20250604_073543.html  insect_dashboard_20250604_075319.html  package-lock.json  pyproject.toml  some.md  test_ui_alignment.py  tox.ini
.claude/: claude_settings.md
.github/workflows/: pages.yml  release.yml  test.yml
config/: default.toml
docs/: Gemfile  README.md  _config.yml  advanced_usage.md  container-security.md  container_scanning.md  contributing.md  dependency-vetting.md  external-scanning.md  index.md  internal-scanning.md  quick-start.md  security_examples.md  threat-detection.md  usage.md  use_cases.md
docs/releases/: RELEASE.md  RELEASE_NOTES_v0.1.6.md  RELEASE_NOTES_v0.1.7.md  RELEASE_NOTES_v0.1.8.md  RELEASE_NOTES_v0.1.9.md
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
src/insect/: __init__.py  __main__.py  cli.py  core.py  dashboard.py  finding.py
src/insect/analysis/: __init__.py  additional_rules.py  binary_analyzer.py  browser_theft_analyzer.py  container_analyzer.py  crypto_wallet_analyzer.py  dependency_manager.py  javascript_static_analyzer.py  llm_exploitation_analyzer.py  malicious_character_analyzer.py  metadata_analyzer.py  python_ast_visitor.py  python_static_analyzer.py  secret_analyzer.py  static_analyzer.py  static_analyzer_rules.py  static_analyzer_utils.py  vulnerability_analyzer.py
src/insect/config/: handler.py
src/insect/reporting/: __init__.py  dashboard_html_formatter.py  formatters.py  html_formatter.py  json_formatter.py  text_formatter.py
src/insect/utils/: __init__.py  cache_utils.py  docker_utils.py  file_utils.py  hash_utils.py  progress_utils.py
tests/: __init__.py  conftest.py  test_cli.py
tests/integration/: test_core_integration.py
tests/unit/: test_cli.py  test_core.py  test_core_cache.py  test_finding.py  test_utils.py
tests/unit/analysis/: test_additional_rules.py  test_browser_theft_analyzer.py  test_container_analyzer.py  test_crypto_wallet_analyzer.py  test_dependency_manager.py  test_metadata_analyzer.py  (+7 more)
unit/: test_core.py
(+15 files in other folders)
